fix white space

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -49,6 +49,10 @@
     margin: 1em 2em;
   }
 
+  .brand {
+    white-space: nowrap;
+  }
+
   .brand-container {
     width: 100%;
     margin: 0;
